improvements to sample browser demo

--- a/browser/sample.html
+++ b/browser/sample.html
@@ -34,22 +34,21 @@
     <a href="https://en.wikipedia.org/wiki/Schwarzschild_metric">Schwarzschild spacetime</a>. The calculation 
     shown in the printout below was
     done live on your computer, in your browser, using 
-    <a href="https://github.com/bcrowell/karl">open-source code</a>. The time required for
-    the results to be displayed is probably not noticeable compared to the time required for the
-    page to be rendered.
+    <a href="https://github.com/bcrowell/karl">open-source code</a>.
 
     <p>
 
-    <div style="height:220px;width:800px;overflow:auto;font-family:monospace" id="console"></div>
+    <div style="height:220px;width:1000px;overflow:auto;font-family:monospace" id="console"></div>
                  <!-- ... for print(); see start_karl.js -->
 
     <p>
 
     The simulation starts at perihelion and continues for a time \(T\) equal to the Keplerian period.
-    The coordinates are calculated as functions of the proper time \(\lambda\) and displayed at
-    intervals \(T/10\). The position \(x\)
+    The position \(x\) is calculated as a function of the proper time \(\lambda\)
+    and displayed at
+    intervals \(T/10\). The position 
     is shown in a version of Schwarzschild coordinates \((t,r,i,j,k)\), where \(i\), \(j\), and \(k\)
-    represent the angular coordinates as a point on the unit 2-sphere, embedded in a fictitious
+    represent the angular position as a point on the unit 2-sphere, embedded in a fictitious
     3-dimensional Euclidean space. The use of the \(i\)-\(j\)-\(k\) coordinates rather than
     \(\theta\) and \(\phi\) is purely for computational convenience, and has the advantage of eliminating
     the coordinate singularities at \(\theta=0\) and \(\pi\). The coordinates \(t\) and \(r\)
