all source code gathered in src; fixed breakage in sample browser app

--- a/src/browser/sample.html
+++ b/src/browser/sample.html
@@ -60,7 +60,7 @@
     <p>
 
     The geodesic is integrated by the fourth-order Runge-Kutta
-    method; the \(i\) in the printout is a running count of the number of steps of integration. For
+    method. For
     \(r \gg 1\), the motion should be Newtonian, and the
     precision of the calculation can be gauged by how well the final position \((r,i,j,k)\) 
     matches up with the initial one.
